# yokeru-integration-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  demo_agent.sh  demo_e2e.sh  demo_webhook.sh  pyproject.toml  tessl.json
.github/skills/: tessl__react-development
.github/workflows/: ci.yml
.tessl/tiles/monkilabs/opencastle/: README.md  tile.json
.tessl/tiles/monkilabs/opencastle/src/orchestrator/skills/react-development/: REFERENCE.md  SKILL.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.scss  App.tsx  index.css
frontend/src/components/CallTable/: CallTable.module.scss  CallTable.test.tsx  CallTable.tsx
frontend/src/components/DispatchForm/: DispatchForm.module.scss  DispatchForm.tsx
frontend/src/components/EventLog/: EventLog.module.scss  EventLog.tsx
frontend/src/components/Header/: Header.module.scss  Header.tsx
frontend/src/components/Simulator/: Simulator.module.scss  Simulator.tsx
frontend/src/components/StatCard/: StatCard.module.scss  StatCard.test.tsx  StatCard.tsx
frontend/src/hooks/: api.ts  usePolling.ts
frontend/src/types/: api.ts
src/: agent.py  api.py  breaker.py  db.py  logging_setup.py  main.py  metrics.py  schemas.py  settings.py  webhook.py
src/adapters/: __init__.py  base.py  cerner_fhir.py
tests/: conftest.py  test_adapter.py  test_agent.py  test_breaker.py  test_db.py  test_logging.py  test_webhook.py
