[project]
name = "yokeru-integration"
version = "0.1.0"
description = "Resilient integration agent connecting EHR/FHIR sources to the Yokeru voice-agent platform."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "prometheus-client>=0.21",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "tenacity>=9.0",
    "uvicorn>=0.32",
]

[project.scripts]
yokeru-agent = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
